--- a/src/index.css
+++ b/src/index.css
@@ -586,44 +586,60 @@ video {
   top: 1.5rem;
 }
 
-.top-8 {
-  top: 2rem;
-}
-
-.top-24 {
-  top: 6rem;
-}
-
-.top-12 {
-  top: 3rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
 .z-0 {
   z-index: 0;
-}
-
-.z-10 {
-  z-index: 10;
-}
-
-.z-50 {
-  z-index: 50;
 }
 
 .z-20 {
   z-index: 20;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
+.col-span-3 {
+  grid-column: span 3 / span 3;
+}
+
 .col-span-4 {
   grid-column: span 4 / span 4;
 }
 
+.col-span-5 {
+  grid-column: span 5 / span 5;
+}
+
+.col-span-full {
+  grid-column: 1 / -1;
+}
+
+.col-start-3 {
+  grid-column-start: 3;
+}
+
 .col-start-6 {
   grid-column-start: 6;
+}
+
+.col-start-5 {
+  grid-column-start: 5;
+}
+
+.col-start-4 {
+  grid-column-start: 4;
+}
+
+.row-start-2 {
+  grid-row-start: 2;
+}
+
+.row-start-3 {
+  grid-row-start: 3;
+}
+
+.-mb-6 {
+  margin-bottom: -1.5rem;
 }
 
 .mt-12 {
@@ -644,6 +660,14 @@ video {
 
 .mt-auto {
   margin-top: auto;
+}
+
+.-mt-6 {
+  margin-top: -1.5rem;
+}
+
+.-mt-12 {
+  margin-top: -3rem;
 }
 
 .block {
@@ -674,16 +698,16 @@ video {
   height: 1rem;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
 .h-full {
   height: 100%;
 }
 
 .h-screen {
   height: 100vh;
-}
-
-.max-h-screen {
-  max-height: 100vh;
 }
 
 .min-h-4 {
@@ -786,30 +810,23 @@ video {
   gap: 1.5rem;
 }
 
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
-.overflow-auto {
-  overflow: auto;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
 
-.overflow-scroll {
-  overflow: scroll;
-}
-
 .overflow-x-hidden {
   overflow-x: hidden;
-}
-
-.overflow-y-scroll {
-  overflow-y: scroll;
 }
 
 .whitespace-pre {
@@ -828,8 +845,9 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
+.rounded-b-3xl {
+  border-bottom-right-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
 }
 
 .rounded-b-none {
@@ -850,36 +868,13 @@ video {
   border-width: 2px;
 }
 
-.border-background {
-  --tw-border-opacity: 1;
-  border-color: rgb(1 13 0 / var(--tw-border-opacity));
-}
-
 .border-foreground {
   --tw-border-opacity: 1;
   border-color: rgb(221 238 225 / var(--tw-border-opacity));
 }
 
-.border-foreground\/50 {
-  border-color: rgb(221 238 225 / 0.5);
-}
-
-.border-foreground\/30 {
-  border-color: rgb(221 238 225 / 0.3);
-}
-
 .border-foreground\/20 {
   border-color: rgb(221 238 225 / 0.2);
-}
-
-.border-red-800 {
-  --tw-border-opacity: 1;
-  border-color: rgb(153 27 27 / var(--tw-border-opacity));
-}
-
-.border-red-900 {
-  --tw-border-opacity: 1;
-  border-color: rgb(127 29 29 / var(--tw-border-opacity));
 }
 
 .bg-background {
@@ -892,49 +887,14 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-blue-950 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(23 37 84 / var(--tw-bg-opacity));
-}
-
 .bg-foreground {
   --tw-bg-opacity: 1;
   background-color: rgb(221 238 225 / var(--tw-bg-opacity));
 }
 
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-green-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(20 83 45 / var(--tw-bg-opacity));
-}
-
-.bg-rose-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(159 18 57 / var(--tw-bg-opacity));
-}
-
-.bg-rose-950 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(76 5 25 / var(--tw-bg-opacity));
-}
-
-.bg-red-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
-}
-
-.bg-red-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -959,14 +919,6 @@ video {
 
 .p-6 {
   padding: 1.5rem;
-}
-
-.p-12 {
-  padding: 3rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
 }
 
 .px-16 {
@@ -994,10 +946,6 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.pb-0 {
-  padding-bottom: 0px;
-}
-
 .pb-16 {
   padding-bottom: 4rem;
 }
@@ -1006,8 +954,8 @@ video {
   padding-left: 1rem;
 }
 
-.pb-12 {
-  padding-bottom: 3rem;
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .font-header {
@@ -1081,16 +1029,16 @@ video {
   opacity: 0.75;
 }
 
-.opacity-80 {
-  opacity: 0.8;
-}
-
-.opacity-60 {
-  opacity: 0.6;
+.opacity-70 {
+  opacity: 0.7;
 }
 
 .mix-blend-difference {
   mix-blend-mode: difference;
+}
+
+.mix-blend-exclusion {
+  mix-blend-mode: exclusion;
 }
 
 .duration-100 {
@@ -1116,6 +1064,36 @@ video {
 html.lenis,
 html.lenis body {
   height: auto;
+}
+
+.top-border {
+  z-index: 1000000000000000000;
+}
+
+.top-border::before {
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  bottom: -48px;
+  left: 24px;
+  z-index: 1000000000000000000;
+  height: 48px;
+  width: 24px;
+  border-top-left-radius: 24px;
+  box-shadow: 0 -24px 0 0 black;
+}
+
+.top-border::after {
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  bottom: -48px;
+  right: 24px;
+  z-index: 1000000000000000000;
+  height: 48px;
+  width: 24px;
+  border-top-right-radius: 24px;
+  box-shadow: 0 -24px 0 0 black;
 }
 
 .texture {
@@ -1226,11 +1204,6 @@ html.lenis body {
 .hover\:-translate-y-1:hover {
   --tw-translate-y: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:text-black:hover {
