--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,36 @@ html.lenis body {
   height: auto;
 }
 
+.top-border {
+  z-index: 1000000000000000000;
+}
+
+.top-border::before {
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  bottom: -48px;
+  left: 24px;
+  z-index: 1000000000000000000;
+  height: 48px;
+  width: 24px;
+  border-top-left-radius: 24px;
+  box-shadow: 0 -24px 0 0 black;
+}
+
+.top-border::after {
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  bottom: -48px;
+  right: 24px;
+  z-index: 1000000000000000000;
+  height: 48px;
+  width: 24px;
+  border-top-right-radius: 24px;
+  box-shadow: 0 -24px 0 0 black;
+}
+
 .texture {
   background-image: url("./assets/images/black-felt.png");
 }
