--- a/src/index.css
+++ b/src/index.css
@@ -618,6 +618,14 @@ video {
   grid-column: 1 / -1;
 }
 
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
+.col-span-5 {
+  grid-column: span 5 / span 5;
+}
+
 .col-start-8 {
   grid-column-start: 8;
 }
@@ -653,6 +661,10 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .block {
@@ -822,6 +834,10 @@ video {
   gap: 1.5rem;
 }
 
+.gap-0 {
+  gap: 0px;
+}
+
 .gap-x-6 {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
@@ -938,6 +954,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-rose-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(159 18 57 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -1132,7 +1153,33 @@ html.lenis body {
   z-index: 1000000000000000000;
 }
 
-@media (min-width: 1024) {
+.top-border::before {
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  bottom: -24px;
+  left: 12px;
+  z-index: 1000000000000000000;
+  height: 24px;
+  width: 24px;
+  border-top-left-radius: 20px;
+  box-shadow: 0 -12px 0 0 black;
+}
+
+.top-border::after {
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  bottom: -24px;
+  right: 12px;
+  z-index: 1000000000000000000;
+  height: 24px;
+  width: 24px;
+  border-top-right-radius: 20px;
+  box-shadow: 0 -12px 0 0 black;
+}
+
+@media (min-width: 768px) {
   .top-border::before {
     content: "";
     position: absolute;
@@ -1158,34 +1205,6 @@ html.lenis body {
     border-top-right-radius: 24px;
     box-shadow: 0 -24px 0 0 black;
   }
-}
-
-.top-border::before {
-  content: "";
-  position: absolute;
-  /* background-color: red; */
-  background-color: transparent;
-  bottom: -24px;
-  left: 12px;
-  z-index: 1000000000000000000;
-  height: 24px;
-  width: 24px;
-  border-top-left-radius: 20px;
-  box-shadow: 0 -12px 0 0 black;
-}
-
-.top-border::after {
-  content: "";
-  position: absolute;
-  /* background-color: red; */
-  background-color: transparent;
-  bottom: -24px;
-  right: 12px;
-  z-index: 1000000000000000000;
-  height: 24px;
-  width: 24px;
-  border-top-right-radius: 20px;
-  box-shadow: 0 -12px 0 0 black;
 }
 
 .texture {
