--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,33 @@ html.lenis body {
   z-index: 1000000000000000000;
 }
 
-@media (min-width: 1024) {
+.top-border::before {
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  bottom: -24px;
+  left: 12px;
+  z-index: 1000000000000000000;
+  height: 24px;
+  width: 24px;
+  border-top-left-radius: 20px;
+  box-shadow: 0 -12px 0 0 black;
+}
+
+.top-border::after {
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  bottom: -24px;
+  right: 12px;
+  z-index: 1000000000000000000;
+  height: 24px;
+  width: 24px;
+  border-top-right-radius: 20px;
+  box-shadow: 0 -12px 0 0 black;
+}
+
+@media (min-width: 768px) {
   .top-border::before {
     content: "";
     position: absolute;
@@ -47,34 +73,6 @@ html.lenis body {
     border-top-right-radius: 24px;
     box-shadow: 0 -24px 0 0 black;
   }
-}
-
-.top-border::before {
-  content: "";
-  position: absolute;
-  /* background-color: red; */
-  background-color: transparent;
-  bottom: -24px;
-  left: 12px;
-  z-index: 1000000000000000000;
-  height: 24px;
-  width: 24px;
-  border-top-left-radius: 20px;
-  box-shadow: 0 -12px 0 0 black;
-}
-
-.top-border::after {
-  content: "";
-  position: absolute;
-  /* background-color: red; */
-  background-color: transparent;
-  bottom: -24px;
-  right: 12px;
-  z-index: 1000000000000000000;
-  height: 24px;
-  width: 24px;
-  border-top-right-radius: 20px;
-  box-shadow: 0 -12px 0 0 black;
 }
 
 .texture {
